# spur-qwen-2.5-omni

./: .gitignore  analyze_encoder.py  audio_visual_starss23-dev-sony.jsonl.json  av_format_conversion.py  check_trainables.py  create_dummy_foa.py  inference_results.jsonl  make_spatial_audio_dataset.py  qwen-omni-inference.py  test_qwen25_spatila_encoder.py
data/: dataset_info.json
qwen2_5_omni_encoder_change_BACKUP/spatpy/: .gitignore  .gitlab-ci.yml  README.md  bumpver.toml  ci_functions.sh  pyproject.toml
qwen2_5_omni_encoder_change_BACKUP/spatpy/docs/: autoalign.rst  autoeq.rst  cmdline.rst  conf.py  damfeezle.rst  index.rst  mixmate.rst  rosellify.rst  sample_uniform.rst  wav2pv.rst
qwen2_5_omni_encoder_change_BACKUP/spatpy/docs/_static/css/: dlb_theme.css  extra.css  test.css
qwen2_5_omni_encoder_change_BACKUP/spatpy/docs/_static/fonts/FiraCode_2/: fira_code.css
qwen2_5_omni_encoder_change_BACKUP/spatpy/docs/_static/fonts/avenir-next-lt-pro/: avenir-next-lt-pro.css
qwen2_5_omni_encoder_change_BACKUP/spatpy/docs/apidoc-templates/: package.rst_t
qwen2_5_omni_encoder_change_BACKUP/spatpy/spatpy/: ambisonics.py  beehive.py  binaural.py  dsp.py  eq.py  formats.py  geometry.py  hankel.py  io.py  ivas.py  lc3.py  placement.py  plot.py  speakers.py  uniform_sampling.py  wind.py  wxy.py
qwen2_5_omni_encoder_change_BACKUP/spatpy/spatpy/data/devices/: L13YogaGen1.json  L13YogaGen1.scad  L13YogaGen1.stl  cube_with_mic.json  find_x3_pro.json  find_x5_pro.json  find_x5_pro.scad  find_x5_pro.stl
qwen2_5_omni_encoder_change_BACKUP/spatpy/spatpy/data/ims_renderer/Darwin/x86_64/: imsren_test_generic_float32_std_release
qwen2_5_omni_encoder_change_BACKUP/spatpy/spatpy/data/ims_renderer/Linux/x86_64/: imsren_test_generic_float32_std_release
qwen2_5_omni_encoder_change_BACKUP/spatpy/spatpy/data/ivas-codec/Darwin/x86_64/: IVAS_cod_ccf6ae2
qwen2_5_omni_encoder_change_BACKUP/spatpy/spatpy/device_model/: __init__.py  comsol.py  grid.py  measurement.py  plot_voxels.py  response.py  simulation.py  visualise.py
qwen2_5_omni_encoder_change_BACKUP/spatpy/spatpy/device_model/pml/: CMakeLists.txt  FEM_Grid_Step_Malfeasance.c  FEM_Grid_Step_PML.c  __init__.py  compare_against_matlab.py  fem_grid_pml.c  fem_grid_pml.h  malfeasance_frontend.cpp
qwen2_5_omni_encoder_change_BACKUP/spatpy/spatpy/device_model/pml/cuda/: __init__.py  pml_cuda.cpp  pml_cuda.h  pml_cuda_kernel.cu  torch_cuarrays.h
qwen2_5_omni_encoder_change_BACKUP/spatpy/spatpy/room_model/: common.py  numpy_backend.py  torch_backend.py
qwen2_5_omni_encoder_change_BACKUP/spatpy/spatpy/signal_path/: __init__.py  analysis.py  examples.py  io.py  primitives.py  synthesis.py  tracing.py  ufb_backend.py
qwen2_5_omni_encoder_change_BACKUP/spatpy/tests/: test_formats.py  test_geometry.py
(+41 files in other folders)
